[gd_scene load_steps=11 format=2]

[ext_resource path="res://src/main/puzzle/night/NightPuzzleTileMap.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/main/puzzle/night/night-piece.gd" type="Script" id=2]
[ext_resource path="res://src/main/puzzle/flat-mix.shader" type="Shader" id=3]
[ext_resource path="res://assets/main/filled-circle-8.png" type="Texture" id=4]
[ext_resource path="res://src/main/puzzle/night/night-squish-fx.gd" type="Script" id=6]

[sub_resource type="ShaderMaterial" id=26]
resource_local_to_scene = true
shader = ExtResource( 3 )
shader_param/mix_color = Color( 1, 1, 1, 0 )

[sub_resource type="ShaderMaterial" id=27]
resource_local_to_scene = true
shader = ExtResource( 3 )
shader_param/mix_color = Color( 1, 1, 1, 0 )

[sub_resource type="Gradient" id=28]
offsets = PoolRealArray( 0, 0.390947 )
colors = PoolColorArray( 1, 1, 1, 0.752941, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=5]
gradient = SubResource( 28 )

[sub_resource type="ParticlesMaterial" id=29]
flag_disable_z = true
direction = Vector3( 0, 1, 0 )
gravity = Vector3( 0, 2400, 0 )
initial_velocity = -800.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 1.3
color_ramp = SubResource( 5 )

[node name="OnionPiece" type="Control" groups=["night_mode_visible"]]
margin_left = 364.0
margin_top = 28.0
margin_right = 688.0
margin_bottom = 572.0
rect_clip_content = true
script = ExtResource( 2 )

[node name="TileMap" parent="." instance=ExtResource( 1 )]
material = SubResource( 26 )
position = Vector2( 0, -96 )
z_index = 3

[node name="SquishFx" type="Control" parent="."]
margin_right = 324.0
margin_bottom = 544.0
script = ExtResource( 6 )
onion_tile_map_path = NodePath("../TileMap")

[node name="SquishMap" parent="SquishFx" instance=ExtResource( 1 )]
material = SubResource( 27 )
position = Vector2( 0, -96 )

[node name="SweatDrops" type="Particles2D" parent="SquishFx"]
position = Vector2( 200, 200 )
z_index = 1
emitting = false
local_coords = false
process_material = SubResource( 29 )
texture = ExtResource( 4 )
